--- a/02_基础标签.md
+++ b/02_基础标签.md
@@ -4,15 +4,29 @@
 
 标题标签有如下几个：
 * &lt;h1&gt;&lt;/h1&gt;
-<!-- * <h2></h2>
-* <h3></h3>
-* <h4></h4>
-* <h5></h5>
-* <h6></h6> -->
+* &lt;h2&gt;&lt;/h2&gt;
+* &lt;h3&gt;&lt;/h3&gt;
+* &lt;h4&gt;&lt;/h4&gt;
+* &lt;h5&gt;&lt;/h5&gt;
+* &lt;h6&gt;&lt;/h6&gt;
+
+标签解释：
 
 代码示例  
 ```html5
-
+<!DOCTYPE html>
+<html lang="en">
+    <title>Document</title>
+</head>
+<body>
+    <h1>这是一个标题内容</h1>
+    <h2>这是一个标题内容</h2>
+    <h3>这是一个标题内容</h3>
+    <h4>这是一个标题内容</h4>
+    <h5>这是一个标题内容</h5>
+    <h6>这是一个标题内容</h6>
+</body>
+</html>
 ```
 
 具体代码  
@@ -22,7 +36,16 @@
 ***
 ## 段落  
 
-## 连接  
+&lt;p&gt;  
+
+代码示例：
+```html5
+```
+
+
+
+
+## 链接  
 
 ## 图像  
 
