--- a/02_基础标签.md
+++ b/02_基础标签.md
@@ -36,16 +36,46 @@
 ***
 ## 段落  
 
-&lt;p&gt;  
+&lt;p&gt;&lt;/p&gt;  
 
 代码示例：
 ```html5
+<!DOCTYPE html>
+<html lang="en">
+    <title>Document</title>
+</head>
+<body>
+    <p>这是一个段落</p>
+    <p>这是另外一个段落。</p>
+</body>
+</html>
 ```
-
-
-
 
 ## 链接  
 
+&lt;a&gt;&lt;/a&gt;  
+
+代码示例：
+```
+<!DOCTYPE html>
+<html lang="en">
+    <title>Document</title>
+</head>
+<body>
+    <a href="https://www.baidu.com.com">这是一个指向百度的链接</a>
+</body>
+</html>
+```
 ## 图像  
 
+代码示例: 
+```
+<!DOCTYPE html>
+<html lang="en">
+    <title>Document</title>
+</head>
+<body>
+    <img decoding="async" src="/images/logo.png" width="258" height="39" />
+</body>
+</html>
+```
